<resources>
    <string name="app_name">RideHailing</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="ride_history">Ride History</string>
    <string name="request_ride">Request Ride</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="set_pickup">Set Pickup</string>
    <string name="set_destination">Set Destination</string>
    <string name="get_fare_estimate">Get Fare Estimate</string>
    <string name="fare_estimate">Fare Estimate</string>
    <string name="base_fare">Base Fare</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="surge_pricing">Surge Pricing</string>
    <string name="total_fare">Total Fare</string>
    <string name="confirm_ride">Confirm Ride</string>
    <string name="cancel">Cancel</string>
    <string name="no_rides_found">No rides found</string>
    <string name="repeat_ride">Repeat Ride</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="destination">Destination</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="fare_estimate_title">Fare Estimate</string>
    <string name="demand_multiplier">Demand Multiplier:</string>
    <string name="traffic_multiplier">Traffic Multiplier:</string>
    <string name="distance">Distance:</string>
    <string name="estimated_duration">Estimated Duration:</string>
    <string name="ride_status">Status:</string>
    <string name="ride_date">Date:</string>
    <string name="driver_name">Driver:</string>
    <string name="error_location_permission">Location permission is required</string>
    <string name="error_network">Network error. Please try again.</string>
    <string name="error_generic">Something went wrong. Please try again.</string>
    <string name="error_invalid_location">Please select valid locations</string>
    <string name="ride_requested_success">Ride requested successfully!</string>
    <string name="currency_format">$%.2f</string>
    <string name="distance_format">%.1f km</string>
    <string name="duration_format">%d min</string>
    <string name="multiplier_format">%.1fx</string>
</resources>


